--- a/test.ini
+++ b/test.ini
@@ -8,7 +8,7 @@ use = config:../ckan/test-core.ini
 
 # Insert any custom config settings to be used when running your extension's
 # tests here. These will override the one defined in CKAN core's test-core.ini
-ckan.plugins = resourcedictionary
+ckan.plugins = resourcedictionary datastore
 
 
 # Logging configuration
