--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,7 @@ jobs:
 
       - name: Install pytest
         run: |
-          python -m pip install --upgrade pip
+#          python -m pip install --upgrade pip
           pip install pytest
 
       - name: Setup CKAN
