--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,8 +79,8 @@ jobs:
 
       - name: Install pytest
         run: |
-#          python -m pip install --upgrade pip
-          pip install pytest
+          python -m pip install --upgrade pip
+          pip install -U pytest
 
       - name: Setup CKAN
         env:
